# Mark-XLVI

./: .coverage  .env.example  AI_ARCHITECTURE_REVIEW.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  COMPETITIVE_ANALYSIS.md  COVERAGE_REPORT.md  DEVOPS_REVIEW.md  Dockerfile  IMPROVEMENT_ROADMAP.md  MODULE_COVERAGE_SUMMARY.md  PERFORMANCE_AUDIT.md  PHASE2_COVERAGE_REPORT.md  PHASE2_FINAL_REPORT.md  PROJECT_MAP.md  REFACTORING_ROADMAP.md  REFACTORING_STATUS.md  RELEASE_v2.0.0.md  SECURITY_AUDIT.md  TECHNICAL_DEBT.md  TESTING_GUIDE.md  VERSION_TAG_REPORT.md  coverage.xml  docker-compose.yml  pyproject.toml  readme.md
.devin/workflows/: refactor.md
.github/workflows/: ci.yml
jarvis/: __init__.py  main.py
jarvis/audio/: __init__.py  capture.py  phone_relay.py  playback.py
jarvis/config/: __init__.py  paths.py  settings.py
jarvis/core/: __init__.py  live_session.py  orchestrator.py  player.py  tool_runner.py
jarvis/llm/: __init__.py  client.py  embeddings.py
jarvis/memory/: __init__.py  json_store.py  postgres_store.py  store.py
jarvis/observability/: __init__.py  logger.py  tracing.py
jarvis/security/: __init__.py  certs.py  permissions.py  sandbox.py  secrets.py
jarvis/tools/: __init__.py  browser_control.py  code_helper.py  computer_control.py  desktop.py  dev_agent.py  open_app.py  registry.py  send_message.py
jarvis/ui/: app.py  constants.py  file_drop.py  hud.py  log_panel.py  main_window.py  metric_bar.py  metrics.py
jarvis/web/: auth.py  crypto.py  server.py
tests/: __init__.py
tests/audio/: test_capture.py  test_capture_basic_v2.py  test_capture_improved.py  test_capture_real.py  test_capture_simple.py  test_capture_simple_v2.py  test_capture_working_v2.py  test_phone_relay.py  test_phone_relay_fixed.py  test_playback.py  test_playback_basic_v2.py  test_playback_fixed.py  test_playback_improved.py  test_playback_real.py  test_playback_working_v2.py
tests/core/: test_live_session.py  test_live_session_fixed.py  test_live_session_improved.py  test_live_session_real.py  test_live_session_working.py  test_live_session_working_v2.py  test_main_fixed_v3.py  test_main_improved.py  test_main_real_v2.py  test_main_simple.py  test_main_simple_v2.py  test_main_working.py  test_main_working_v2.py  test_orchestrator.py  test_orchestrator_improved.py  test_tool_runner.py  test_tool_runner_fixed.py  test_tool_runner_improved.py  test_tool_runner_real_v2.py  test_tool_runner_working_v2.py
tests/integration/: test_end_to_end_comprehensive.py  test_workflows.py
tests/llm/: test_client.py  test_client_correct.py  test_client_enhanced.py  test_client_improved.py  test_client_phase2.py  test_embeddings.py  test_embeddings_working_v2.py
tests/main/: test_main.py  test_main_fixed.py
tests/memory/: test_json_store.py  test_postgres_store.py
tests/observability/: test_tracing.py
tests/performance/: test_load.py
tests/security/: test_certs.py  test_permissions.py  test_sandbox.py  test_secrets.py
tests/tools/: test_browser_control.py  test_legacy_tools.py  test_legacy_wrappers.py  test_open_app.py  test_registry.py
tests/ui/: test_constants.py  test_headless.py  test_headless_comprehensive.py  test_headless_v2.py  test_headless_working.py  test_metrics.py  test_widgets.py
tests/web/: test_auth.py  test_auth_enhanced.py  test_crypto.py  test_crypto_enhanced.py  test_routes_comprehensive.py  test_routes_integration.py  test_server.py  test_server_phase2.py  test_uploads_enhanced.py  test_websocket_enhanced.py  test_websocket_fixed.py  test_websocket_phase2.py  test_ws.py
(+4 files in other folders)
